[HU translation] Fix errors again in hu.po

--- a/po/hu.po
+++ b/po/hu.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-30 22:11+0100\n"
-"PO-Revision-Date: 2020-05-27 13:17+0100\n"
+"PO-Revision-Date: 2020-05-27 13:39+0100\n"
 "Last-Translator: Andy Blackburn <andyblac@icloud.com>\n"
 "Language-Team: Mediavox, robertut <info@mediavox.hu, robertut@yahoo.com>\n"
 "Language: hu_HU\n"
@@ -282,7 +282,7 @@ msgstr "%s %s formátumú adat DVD (HDTV kompatibilis)"
 
 #, python-format
 msgid "%s %s front panel"
-msgstr ""
+msgstr "%s %s előlap"
 
 #
 #, fuzzy, python-format
@@ -315,8 +315,8 @@ msgstr ""
 #, python-format
 msgid "%s updated package available"
 msgid_plural "%s updated packages available"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%s elérhető frissített csomag"
+msgstr[1] "%s elérhető frissített csomagok"
 
 #
 #, fuzzy, python-format
