--- a/po/it.po
+++ b/po/it.po
@@ -1,24 +1,84 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Italian language translation for Enigma2 for OBH 4.3\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-04-15 08:23+0000\n"
-"PO-Revision-Date: 2020-06-07 23:28+0200\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
 "Last-Translator: Alexwilmac\n"
-"Language-Team: Alexwilmac & insanity\n"
-"Language: it_IT\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-SourceCharset: UTF-8\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: it\n"
 "X-Generator: Poedit 2.3.1\n"
+
+msgid "Subtitle Long"
+msgstr "Sottotitoli (a lungo)"
+
+msgid "List/File long"
+msgstr "Lista/File (a lungo)"
+
+msgid "List/File"
+msgstr "Lista/File"
+
+msgid "Back/Recall long"
+msgstr "Indietro/Richiama (a lungo)"
+
+msgid "Enable Quad PiP"
+msgstr "Abilita il Quad-PiP"
+
+msgid ""
+"Select 'Yes' to delete all languages except English and current language:\n"
+"\n"
+"Select 'No' to delete only the chosen language:\n"
+"\n"
+msgstr ""
+"Scegli 'SÌ' per cancellare TUTTE le lingue ECCETTO l'inglese e la lingua corrente.\n"
+"\n"
+"ATTENZIONE!!! Se scegli NO cancelli SOLAMENTE LA LINGUA SELEZIONATA, ovvero:\n"
+"\n"
+
+msgid ""
+"Do you really want to delete selected language:\n"
+"\n"
+msgstr ""
+"Vuoi davvero eliminare il linguaggio selezionato?\n"
+"\n"
+
+
+msgid "Delete Language(s)"
+msgstr "Cancella lingue"
+
+msgid "Add Language"
+msgstr "Aggiungi lingua"
+
+msgid "search EPG"
+msgstr "Cerca in EPG"
+
+msgid "search EPG from history..."
+msgstr "Cerca nella cronologia dell'EPG"
+
+msgid "Show Grid EPG"
+msgstr "Mostra EPG GRAFICO multicanale"
+
+msgid "Show Single EPG"
+msgstr "Mostra EPG singolo canale"
+
+msgid "Show Multi EPG"
+msgstr "Mostra EPG mutiplo per singolo canale"
 
 msgid "SkinSelector: Restart GUI"
 msgstr "Selettore skin: riavvio della GUI"
 
+msgid "Restart last movie"
+msgstr "Riavvia l'ultimo file multimediale"
+
+msgid "Toggle default subtitles"
+msgstr "Commuta i sottotitoli"
+
 msgid "To save and apply the selected '%s' skin the GUI needs to restart. Would you like to save the selection and restart the GUI now?"
-msgstr "Per applicare la skin %s prescelta devo riavviare la GUI.\n"
+msgstr ""
+"Per applicare la skin %s prescelta devo riavviare la GUI.\n"
 "Vuoi salvare la scelta e riavviare la GUI adesso?"
 
 msgid "alphabetic"
@@ -993,14 +1053,15 @@ msgstr ""
 "per le registrazioni dell’anno corrente.\n"
 "Nasconde il giorno della settimana per le registrazioni fatte negli anni precedenti."
 
+#ex Agg. e +Agg.
 msgid "Add"
-msgstr "Agg."
+msgstr "Crea"
 
 msgid "Add AutoTimer"
-msgstr "Agg.Autotimer"
+msgstr "Crea Autotimer"
 
 # msgid "Add Autotimer"
-# msgstr "Agg. Autotimer"
+# msgstr "Crea Autotimer"
 msgid "Add Timer"
 msgstr "CREA Timer"
 
@@ -3313,7 +3374,7 @@ msgid "Directory browser"
 msgstr "Sfogliare cartelle"
 
 msgid "Disable"
-msgstr "Disabilitare"
+msgstr "Disabilita"
 
 msgid "Disable Animations"
 msgstr "Disabilitare animazioni"
@@ -3606,7 +3667,7 @@ msgid "EPG location"
 msgstr "Posizione di EPG"
 
 msgid "EPG Search"
-msgstr "Ricerca EPG"
+msgstr "Cerca in EPG"
 
 msgid "EPG settings"
 msgstr "Configurazione EPG"
@@ -4790,8 +4851,13 @@ msgstr "Ungheria"
 msgid "IMDB search for current event"
 msgstr "Ricerca in IMDb dell’evento attuale"
 
+# in EPG Multicanale grafico
 msgid "IMDb Search"
 msgstr "Cerca in IMDb"
+
+# in impostazione tasti
+msgid "IMDb search"
+msgstr "Cerca nell'IMDb"
 
 msgid "IP"
 msgstr "IP"
@@ -8045,7 +8111,7 @@ msgid "Right from servicename"
 msgstr "A destra del nome canale"
 
 msgid "Right long"
-msgstr "Destro lungo"
+msgstr "Destro (a lungo)"
 
 msgid "Roll-off"
 msgstr "Srotolare"
@@ -8293,7 +8359,7 @@ msgid "Search"
 msgstr "Ricerca"
 
 msgid "Search IMDb for information about the current event."
-msgstr "Cerca su IMDb informazioni sull'evento corrente."
+msgstr "Cerca nell'IMDb informazioni sull'evento corrente."
 
 msgid "Search east"
 msgstr "Ricercare a est"
