[translation] Italian language translation for Enigma2-Update Latest commit b8bf3df 20 days ago History
Improved the Fallback section.

--- a/po/it.po
+++ b/po/it.po
@@ -3840,8 +3840,7 @@ msgstr "Abilitare per evidenziare gli eventi che sono attualmente in corso."
 msgid ""
 "Enable usage of tuners from another Enigma2 receiver on the local network. Remote tuners will be used when tuners are not available on this receiver. (No free tuner or service type is not available.)"
 msgstr ""
-"Abilita l'uso di tuner da un altro ricevitore Enigma2 nella rete locale.\n"
-"I tuner remoti verranno utilizzati quando non ve ne sono disponibili su questo ricevitore.\n"
+"Permette a un altro ricevitore Enigma2 nella rete locale di utilizzare i tuner di questo box. I tuner remoti verranno utilizzati quando non ve ne sono disponibili a sufficienza in questo ricevitore.\n"
 "(Evita l’errore: “Nessun tuner libero o servizio non disponibile”.)"
 
 msgid "Enabled"
